Fixed Navigation on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ Main components
   z-index: 1;
   right: 5%;
   bottom: 30px;
-  width: 10%;
+  width: 150px;
   max-width: 400px;
   max-height: 90%;
   overflow-y: scroll;
